###############################
RealOpInsight ChangeLog
###############################
2.3.0 (Briator)
--------------
  * Added support for MK Livestatus remote socket
  * Added support for handling full screen
  * Updated toolbar
  * Data points are not case insensitive
  
2.2.1 (Lucia, p1)
-------------
  * Added support for Zabbix 1.8.x. Fixed ticket #11
  * Minor upates on metadata handling

2.2.0 (Lucia)
--------------
  * Fixed compilation problems on nullptr. See Ticket #8
  * Fixed metadata handling. See ticket #9

2.2.0 (beta)
--------------
  * Added support for Zenoss. Has been tested with Zenoss 4.x but would work
    with Zenoss 3.x
  * Update severity model introducing a fine-grained manageability of incidents
    (UNKNOWN, CRITICAL, MAJOR, MINOR, NORMAL)
  * Added System Tray Icon for notification the main window is inactive
  * Support some Zabbix's meta tag (e.g. {HOST.NAME}) in alarm messages
  * Brings new and optimized data structures and algorithms for better
    performances and a reduced memory footprint
  * Added buttons for back, forward and stop actions through the embedded browser
  * Added support for zeromq 3.x (ticket #3)
  * Added man pages for the commands ngrt4n-manager, ngrt4n-oc and ngrt4n-editor
  * Added contextual help for editor fields
  * Fixed compilation problems on c++11 (tickets #4 and #5)
  * Fixed bug #6 when the Operations Console crashes when the colon is ommited
    on the authchain for Zabbix
  * Changed tooltip font

2.1.0 (M-Sylvie)
--------------
  * Added option for hiding/showing the auth chain
  * Fixed bug #1: The severities of Zabbix triggers are now supported.
  * Updated the preferences window for easing the setting of monitoring settings

2.1.0beta1
--------------
  * Added support for Zabbix: Requires Zabbix >= 1.7. 
    Known Issues: the severities of triggers are not yet taken into account. 
    All problems are simply reported. This will be fixed before the stable 
    release (ticket #1). 
