@@ -7,6 +7,7 @@ RealOpInsight ChangeLog
   * Added support for handling full screen
   * Updated toolbar
   * Data points are not case insensitive
+  * New icons and update
   
 2.2.1 (Lucia, p1)
 -------------
